# RSQKit-chatbot

./: .gitignore  README.md  app.py  app_config.py  chroma_data_ingestor.py  custom_stop_words.json  directories.yaml  download_rsqkit_files.sh  ingest_rsqkit_files.sh  llm_provider_tools.py  provider_config.yaml  provider_persistence.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  rsqkit_scrap.py  run_app.sh  settings.py
.github/workflows/: integration-test-workflow.yaml  unit-test-workflow.yaml
.streamlit/: config.toml
core_utils/: health_api.py  hybrid_search.py  openai_clients.py  rag_hybrid_utils.py  retrieval_utils.py
core_utils/data_types/: node.py  retrieval_type.py
core_utils/document_reader/: __init__.py  exceptions.py  reader.py
core_utils/text_chunking/: text_chunker.py
llms/: openai_interface.py
pages/: collections.py  document_chat.py  general_purpose_chat.py  home.py  rag_on_collection.py  rsqkit_rag_chat.py  tasks.py
prompt_templates/: prompt_builder.py  prompts.py  system_prompts.py
task_modules/: add_new_task.md  ai_ocr_task.py  base_task.py  code_review_task.py
tests/integration/: test_agent_query_processing_integration.py  test_document_reader_integration.py  test_hybrid_search_integration.py  test_llm_client_integration.py  test_multi_retrieval_engine_integration.py  test_page_2_rag_pipeline_integration.py  (+2 more)
ui/: chat_history.py  custom_display.py  custom_styles.py  handle_session_state.py  header.py  rag_settings_ui.py  ui_llm_settings.py  ui_rag_settings.py
vision/: ocr_by_provider.py
(+11 files in other folders)
